trunk/Archive2/0c/447bbca9e71fb4/output
main.cpp:14:22: error: comparison between pointer and integer ('bool (*)(int, int, int, char, char, char)' and 'int')
    if(straightFlush == true)
       ~~~~~~~~~~~~~ ^  ~~~~
1 error generated.
